@startuml
'https://plantuml.com/class-diagram

abstract class BaseProp
{
    + BaseProp(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
}

class BloodProp
{
    - Blood:int
    + BloodProp(int locationX, int locationY,int speedX, int speedY)
    + AddBlood():int
}
class BombProp
{
    - power:int
    + BombProp(int locationX, int locationY,int speedX, int speedY)
    + Bomb():int
}
class BulletProp
{
    - number:int
    + BulletProp(int locationX, int locationY,int speedX, int speedY)
    + AddBullet():int
}
BaseProp <|-- BloodProp
BaseProp <|-- BombProp
BaseProp <|-- BulletProp


interface PropCreator
{
    + Create():BaseProp
}
class BloodPropCreator
{
    +Create():BaseProp
}
class BombPropCreator
{
    +Create():BaseProp
}
class BulletPropCreator
{
    +Create():BaseProp
}
PropCreator <|.. BloodPropCreator
PropCreator <|.. BombPropCreator
PropCreator <|.. BulletPropCreator

BloodPropCreator ..> BloodProp
BombPropCreator ..> BombProp
BulletPropCreator ..> BulletProp

@enduml